Remove sign up button and fix source button wrapping

--- a/1.14/styles.css
+++ b/1.14/styles.css
@@ -221,6 +221,8 @@ a:focus {
 .footer #source-button {
 	margin-left: 10px;
 	padding: 10px;
+	white-space: nowrap;
+	line-height: 55px;
 }
 
 p {
