--- a/styles.css
+++ b/styles.css
@@ -190,6 +190,24 @@ a:focus {
 	box-shadow: none;
 }
 
+.glowing {
+	margin-bottom: 20px;
+	color: black;
+	font-size: 36px;
+	padding-left: 10px;
+	padding-right: 10px;
+	text-shadow:
+    -1px -1px 0 var(--accent-color),  
+     1px -1px 0 var(--accent-color),
+    -1px  1px 0 var(--accent-color),
+	 1px  1px 0 var(--accent-color),
+	 0px 0px 15px var(--sign-up-shadow);
+	font-family: 'Jua', sans-serif;
+	font-weight: 100;
+	letter-spacing: 2px;
+	text-transform: none;
+}
+
 .button img {
 	margin-right: 4px;
 	margin-bottom: 1px;
@@ -207,6 +225,8 @@ a:focus {
 .footer #source-button {
 	margin-left: 10px;
 	padding: 10px;
+	white-space: nowrap;
+	line-height: 55px;
 }
 
 p {
